force-app/main/default/objects/FS_OD_Settings__c/FS_OD_Settings__c.object-meta.xml
<CustomObject>
    <description>OD Settings</description>
    <label>OD Settings</label>
    <nameField>
        <displayFormat>ODS-{0000000}</displayFormat>
        <label>OD Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OD Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>