force-app/main/default/objects/FS_OD_Settings__c/fields/ADA_After_Pour_Msec_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>ADA_After_Pour_Msec_Last_Updtd_By__c</fullName>
    <label>Screen Idle To ADA Home Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>