force-app/main/default/objects/FS_OD_Settings__c/fields/ADA_Home_To_Home_Msec_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>ADA_Home_To_Home_Msec_Last_Updtd_By__c</fullName>
    <label>Screen Idle Exit ADA Home Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>