force-app/main/default/objects/FS_OD_Settings__c/fields/ADAAfter_Pour_Msec__c.field-meta.xml
<CustomField>
    <fullName>ADAAfter_Pour_Msec__c</fullName>
    <defaultValue>13000</defaultValue>
    <label>Screen Idle To ADA Home (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>