force-app/main/default/objects/FS_OD_Settings__c/fields/ADAAfter_Pour_Msec_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>ADAAfter_Pour_Msec_Updated_on__c</fullName>
    <label>Screen Idle To ADA Home (ms) Updated On</label>
    <type>DateTime</type>
</CustomField>