force-app/main/default/objects/FS_OD_Settings__c/fields/ADAHome_To_Home_Msec__c.field-meta.xml
<CustomField>
    <fullName>ADAHome_To_Home_Msec__c</fullName>
    <defaultValue>25000</defaultValue>
    <label>Screen Idle Exit ADA to Home (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>