force-app/main/default/objects/FS_OD_Settings__c/fields/ADAHome_To_Home_Msec_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>ADAHome_To_Home_Msec_Updated_on__c</fullName>
    <label>Screen Idle Exit ADA to Home Updated on</label>
    <type>DateTime</type>
</CustomField>