force-app/main/default/objects/FS_OD_Settings__c/fields/After_Pour_Msec__c.field-meta.xml
<CustomField>
    <fullName>After_Pour_Msec__c</fullName>
    <defaultValue>8000</defaultValue>
    <label>Screen Idle to Home (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>