force-app/main/default/objects/FS_OD_Settings__c/fields/After_Pour_Msec_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>After_Pour_Msec_Last_Updtd_By__c</fullName>
    <label>Screen Idle to Home (ms) Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>