force-app/main/default/objects/FS_OD_Settings__c/fields/After_Pour_Msec_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>After_Pour_Msec_Updated_on__c</fullName>
    <label>Screen Idle to Home (ms) Updated on</label>
    <type>DateTime</type>
</CustomField>