force-app/main/default/objects/FS_OD_Settings__c/fields/Agitate_After_Time__c.field-meta.xml
<CustomField>
    <fullName>Agitate_After_Time__c</fullName>
    <label>Agitate After Time (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>