force-app/main/default/objects/FS_OD_Settings__c/fields/Agitate_After_Time_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Agitate_After_Time_Updated_on__c</fullName>
    <label>Agitate After Time Updated on</label>
    <type>DateTime</type>
</CustomField>