force-app/main/default/objects/FS_OD_Settings__c/fields/Agitate_After_Time_Verified__c.field-meta.xml
<CustomField>
    <fullName>Agitate_After_Time_Verified__c</fullName>
    <label>Agitate After Time Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>