force-app/main/default/objects/FS_OD_Settings__c/fields/Agitate_After_Volume__c.field-meta.xml
<CustomField>
    <fullName>Agitate_After_Volume__c</fullName>
    <label>Agitate After Volume (ml)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>