force-app/main/default/objects/FS_OD_Settings__c/fields/Agitate_After_Volume_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Agitate_After_Volume_Last_Updtd_By__c</fullName>
    <label>Agitate After Volume Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>