force-app/main/default/objects/FS_OD_Settings__c/fields/Agitation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Agitation_Duration__c</fullName>
    <label>Agitation Duration (s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>