force-app/main/default/objects/FS_OD_Settings__c/fields/Agitation_Duration_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Agitation_Duration_Last_Updtd_By__c</fullName>
    <label>Agitation Duration Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>