force-app/main/default/objects/FS_OD_Settings__c/fields/Agitation_Duration_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Agitation_Duration_Updated_on__c</fullName>
    <label>Agitation Duration Updated on</label>
    <type>DateTime</type>
</CustomField>