force-app/main/default/objects/FS_OD_Settings__c/fields/All_Actual_Artifacts_Uptd_On__c.field-meta.xml
<CustomField>
    <fullName>All_Actual_Artifacts_Uptd_On__c</fullName>
    <label>All Actual Artifacts Uptd On</label>
    <type>DateTime</type>
</CustomField>