force-app/main/default/objects/FS_OD_Settings__c/fields/Allow_Language_Selection_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Allow_Language_Selection_Updated_By__c</fullName>
    <label>Allow Language Selection Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>