force-app/main/default/objects/FS_OD_Settings__c/fields/Allow_Language_Selection_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Allow_Language_Selection_Updated_on__c</fullName>
    <label>Allow Language Selection Updated On</label>
    <type>DateTime</type>
</CustomField>