force-app/main/default/objects/FS_OD_Settings__c/fields/Ambient_Screen_Upd_Timer_Msec_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Screen_Upd_Timer_Msec_Updated_on__c</fullName>
    <label>Screen Ambient Update (ms) Updated on</label>
    <type>DateTime</type>
</CustomField>