force-app/main/default/objects/FS_OD_Settings__c/fields/Ambient_Screen_Update_Timer_Msec__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Screen_Update_Timer_Msec__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>Screen Ambient Update (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>