force-app/main/default/objects/FS_OD_Settings__c/fields/Ambient_Screen_Updt_Timer_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Screen_Updt_Timer_Last_Updtd_By__c</fullName>
    <label>Screen Ambient Update (ms) Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>