force-app/main/default/objects/FS_OD_Settings__c/fields/Are_You_Still_There_Msec__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Still_There_Msec__c</fullName>
    <defaultValue>13000</defaultValue>
    <label>Screen Idle Selection (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>