force-app/main/default/objects/FS_OD_Settings__c/fields/Are_You_Still_There_Msec_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Still_There_Msec_Last_Updtd_By__c</fullName>
    <label>Screen Idle Selection (ms) Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>