force-app/main/default/objects/FS_OD_Settings__c/fields/Are_You_Still_There_Msec_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Still_There_Msec_Updated_on__c</fullName>
    <label>Screen Idle Selection (ms) Updated on</label>
    <type>DateTime</type>
</CustomField>