force-app/main/default/objects/FS_OD_Settings__c/fields/Are_You_Still_There_Msec_Verified__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Still_There_Msec_Verified__c</fullName>
    <label>Screen Idle Selection (ms) Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>