force-app/main/default/objects/FS_OD_Settings__c/fields/Calorie_Display_Enable_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Calorie_Display_Enable_Last_Updtd_By__c</fullName>
    <label>Caloric Display Enable Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>