force-app/main/default/objects/FS_OD_Settings__c/fields/Calorie_Display_Enable_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Calorie_Display_Enable_Updated_on__c</fullName>
    <label>Caloric Display Enable Updated on</label>
    <type>DateTime</type>
</CustomField>