force-app/main/default/objects/FS_OD_Settings__c/fields/Calorie_Display_Enable_Verified__c.field-meta.xml
<CustomField>
    <fullName>Calorie_Display_Enable_Verified__c</fullName>
    <label>Caloric Display Enable Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>