force-app/main/default/objects/FS_OD_Settings__c/fields/Camera_Enable_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Camera_Enable_Last_Updtd_By__c</fullName>
    <label>Camera Enable Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>