force-app/main/default/objects/FS_OD_Settings__c/fields/Camera_Enable_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Camera_Enable_Updated_on__c</fullName>
    <label>Camera Enable Updated on</label>
    <type>DateTime</type>
</CustomField>