force-app/main/default/objects/FS_OD_Settings__c/fields/Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>Chain_ACN__c</fullName>
    <formula>FS_OD_RecId__r.Chain_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain ACN</label>
    <type>Text</type>
</CustomField>