force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Cup_Name_1__c</fullName>
    <description>Cup Name 1</description>
    <label>Cup Name 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>