force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Name_1_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Cup_Name_1_Last_Updtd_By__c</fullName>
    <label>Cup Name 1 Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>