force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Cup_Name_3__c</fullName>
    <description>Cup Name 0</description>
    <label>Cup Name 3</label>
    <length>64</length>
    <type>Text</type>
</CustomField>