force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Name_3_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Cup_Name_3_Updated_on__c</fullName>
    <label>Cup Name 3 Updated on</label>
    <type>DateTime</type>
</CustomField>