force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Name_3_Verified__c.field-meta.xml
<CustomField>
    <fullName>Cup_Name_3_Verified__c</fullName>
    <label>Cup Name 3 Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>