force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Size_1_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Cup_Size_1_Updated_on__c</fullName>
    <label>Cup Size 1 Updated on</label>
    <type>DateTime</type>
</CustomField>