force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Size_2__c.field-meta.xml
<CustomField>
    <fullName>Cup_Size_2__c</fullName>
    <description>Cup Size 2</description>
    <label>Cup Size 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>