force-app/main/default/objects/FS_OD_Settings__c/fields/Cup_Size_3__c.field-meta.xml
<CustomField>
    <fullName>Cup_Size_3__c</fullName>
    <description>Cup Size 0</description>
    <label>Cup Size 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>