force-app/main/default/objects/FS_OD_Settings__c/fields/Daylight_Savings_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Daylight_Savings_Indicator__c</fullName>
    <label>Daylight Savings Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>