force-app/main/default/objects/FS_OD_Settings__c/fields/Debug_Flag_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Debug_Flag_Expiration__c</fullName>
    <label>Debug Flag Expiration</label>
    <type>DateTime</type>
</CustomField>