force-app/main/default/objects/FS_OD_Settings__c/fields/Debug_Flag_Expiration_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Debug_Flag_Expiration_Updated_On__c</fullName>
    <label>Debug Flag Expiration Updated On</label>
    <type>DateTime</type>
</CustomField>