force-app/main/default/objects/FS_OD_Settings__c/fields/Debug_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log_Level__c</fullName>
    <label>Debug Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DataV_Only</fullName>
            </value>
            <value>
                <fullName>Non_DataV_Only</fullName>
            </value>
            <value>
                <fullName>All_Log</fullName>
            </value>
            <value>
                <fullName>No_Log (default value)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>