force-app/main/default/objects/FS_OD_Settings__c/fields/Debug_Log_Level_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log_Level_Updated_By__c</fullName>
    <label>Debug Log Level Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>