force-app/main/default/objects/FS_OD_Settings__c/fields/Debug_Log_Level_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log_Level_Updated_On__c</fullName>
    <label>Debug Log Level Updated On</label>
    <type>DateTime</type>
</CustomField>