force-app/main/default/objects/FS_OD_Settings__c/fields/Default_Language_For_CUI_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_For_CUI_Last_Updtd_By__c</fullName>
    <label>Default CUI Language Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>