force-app/main/default/objects/FS_OD_Settings__c/fields/Default_Language_For_CUI_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_For_CUI_Updated_on__c</fullName>
    <label>Default CUI Language Updated on</label>
    <type>DateTime</type>
</CustomField>