force-app/main/default/objects/FS_OD_Settings__c/fields/Default_Language_For_NCUI__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_For_NCUI__c</fullName>
    <label>Default NCUI Language</label>
    <length>64</length>
    <type>Text</type>
</CustomField>