force-app/main/default/objects/FS_OD_Settings__c/fields/Default_Language_For_NCUI_Verified__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_For_NCUI_Verified__c</fullName>
    <label>Default NCUI Language Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>