force-app/main/default/objects/FS_OD_Settings__c/fields/Do_Not_Update_Content_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Content_Updated_By__c</fullName>
    <label>Do Not Update Bundle Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>