force-app/main/default/objects/FS_OD_Settings__c/fields/Do_Not_Update_Rounding_Rules_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Rounding_Rules_Updated_On__c</fullName>
    <label>Do Not Update Rounding Rules Updated On</label>
    <type>DateTime</type>
</CustomField>