force-app/main/default/objects/FS_OD_Settings__c/fields/Do_Not_Update_Settings__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Settings__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Do Not Update Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>