force-app/main/default/objects/FS_OD_Settings__c/fields/Dry_Run_Ruleset_Update__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Ruleset_Update__c</fullName>
    <label>Dry Run Ruleset Update</label>
    <length>80</length>
    <type>Text</type>
</CustomField>