force-app/main/default/objects/FS_OD_Settings__c/fields/Dry_Run_Ruleset_Update_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Ruleset_Update_Updated_On__c</fullName>
    <label>Dry Run Ruleset Update Updated On</label>
    <type>DateTime</type>
</CustomField>